test/errors/error14(1).sp
%t contains a number not in nat
#maxint=5.
sorts
#s={1,2,3}. 
predicates
p(#s).
rules
p(7-3).
